syntax = "proto3";

package program03;

option java_package = "com.partha.program03";
option java_multiple_files = true;

message BalanceCheckRequest{
  int32 account_number=1;
}

message AccountBalance {
  int32  account_number=1;
  int32 balance=2;
}

message AllAccountsResponse{
  repeated AccountBalance accounts=1;
}

message WithdrawRequest{
  int32 account_number=1;
  int32 amount=2;
}

message Money{
  int32 amount=1;
}

//NOTE : that we  are not adding INTERNAL_ERROR and others since those are all server problem
//thus here are adding only client validation errors
enum ValidationCode{
  INVALID_ACCOUNT = 0;
  INVALID_AMOUNT = 1;
  INSUFFICIENT_BALANCE =2;
}

message ErrorMessage{
  ValidationCode validation_code = 1;
}

service BankService{

  //unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  //server-streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);
}